# NER-Finetuning

./: .dockerignore  .gitignore  Dockerfile  README.md  aaaaa.md  api.py  convert_to_gguf.py  dataset.jsonl  docker-compose.yml  inference_gguf.py  main.py  notebooka485467883.ipynb  pyproject.toml  test_api.py  test_dataset.jsonl  test_inference.py  train.py
best_model/: detailed_results_post_training.json  detailed_results_pre_training.json  fuzzy_matches_post_training.json  fuzzy_matches_pre_training.json  metrics_improvement.json  metrics_post_training.json  metrics_pre_training.json  summary_report.txt  training_config.json  training_history.json
best_model/lora_adapter/: adapter_config.json
